--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "datetime-lib",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.3",
+  "description": "datetime tools",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "webpack",
+    "build": "webpack"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "datetime-lib"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:solumon/datetime-lib.git"
+  },
+  "author": "solumon",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "clean-webpack-plugin": "^3.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0"
+  }
 }
