--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "author": "solumon",
   "license": "MIT",
+  "peerDependencies": {
+    "dayjs": "^1.9.7"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "babel-plugin-add-module-exports": "^1.0.4",
     "clean-webpack-plugin": "^3.0.0",
+    "dayjs": "^1.9.7",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
